--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   }
   
   input[type="text"] {
-    font-size: 1.2rem;
+    font-size: 2rem;
     padding: 0.3rem;
     border-radius: 0.5rem;
     border: 1px solid #ccc;
@@ -24,7 +24,7 @@
   }
   
   button {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-left: 0.5rem;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
@@ -49,7 +49,7 @@
   
   ul {
     list-style: none;
-    margin: 0;
+    margin: 2;
     padding: 0;
   }
   
@@ -57,6 +57,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 0.5rem;
+    margin-left: 0.5rem;
   }
   
   li input[type="checkbox"] {
@@ -64,7 +65,7 @@
   }
   
   li button {
-    margin-left: auto;
+    margin-left: 0.5rem;
     padding: 0 0.2rem;
     border-radius: 0.5rem;
     border: none;
